cluster/apps/nextcloud/templates/ingressroute.yaml
###############################################################################
# Service → VM on LAN (Nextcloud AIO on :11000)
###############################################################################
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
  namespace: nextcloud
spec:
  ports:
    - name: http
      port: 11000
      targetPort: 11000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nextcloud-service
  namespace: nextcloud
subsets:
  - addresses:
      - ip: 192.168.0.133
    ports:
      - name: http
        port: 11000
---
###############################################################################
# IngressRoute
###############################################################################
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    gethomepage.dev/href: "https://nextcloud.rwcloud.org"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Nextcloud VM
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: nextcloud.png
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nextcloud.rwcloud.org`)
      services:
        - name: nextcloud-service
          port: 11000
          scheme: http
          serversTransport: nextcloud-transport
  tls:
    secretName: nextcloud-tls
